aggiunti comnadi libreria glide negli adapter di home fragment

--- a/app/src/main/res/layout/home_card.xml
+++ b/app/src/main/res/layout/home_card.xml
@@ -15,7 +15,9 @@
         android:id="@+id/imageViewTest"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+       />
 
     <TextView
         android:id="@+id/textViewTest"
