--- a/app/src/main/res/layout/home_subcard.xml
+++ b/app/src/main/res/layout/home_subcard.xml
@@ -15,7 +15,8 @@
         android:id="@+id/imageViewTestS"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"/>
 
     <TextView
         android:id="@+id/textViewTestS"
