modificata edit text password

--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -149,6 +149,7 @@
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:minHeight="48dp"
+            android:hint="@string/password"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <Button
