--- a/app/src/main/res/menu/drawer_menu_not_logged.xml
+++ b/app/src/main/res/menu/drawer_menu_not_logged.xml
@@ -3,6 +3,11 @@
     <group android:checkableBehavior="single">
 
         <item
+            android:id="@+id/foodPreferences"
+            android:title="Preferences"
+            android:icon="@drawable/ic_preferences_v2"/>
+
+        <item
             android:id="@+id/login"
             android:title="Login"
             android:icon="@drawable/ic_login"/>
