--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -19,7 +19,7 @@
         <SearchView
             android:id="@+id/sv_ingredient"
             android:layout_width="250dp"
-            android:layout_height="35dp"
+            android:layout_height="45dp"
             android:layout_gravity="center"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
@@ -53,29 +53,22 @@
             android:layout_weight="1"
             android:background="?android:attr/selectableItemBackground"
             android:text="Close"
-            android:textSize="13dp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="13dp" />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="350dp"
         android:background="@color/cookery_blue">
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chip_group_search_ingredient"
-            android:layout_width="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_ingredient_search"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp">
+            android:layout_marginStart="10dp">
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_ingredient"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:text="Parmigiano" />
-
-        </com.google.android.material.chip.ChipGroup>
+        </androidx.recyclerview.widget.RecyclerView>
     </RelativeLayout>
 </LinearLayout>
