--- a/app/src/main/res/menu/drawer_menu_not_logged.xml
+++ b/app/src/main/res/menu/drawer_menu_not_logged.xml
@@ -8,7 +8,7 @@
             android:icon="@drawable/ic_preferences_v2"/>
 
         <item
-            android:id="@+id/login"
+            android:id="@+id/login_drawer"
             android:title="Login"
             android:icon="@drawable/ic_login"/>
 
