--- a/app/src/main/res/layout/activity_single_recipe.xml
+++ b/app/src/main/res/layout/activity_single_recipe.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.SingleRecipeActivity"
     tools:ignore="SpeakableTextPresentCheck">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -212,6 +213,18 @@
             android:text="@string/crea_una_lista_della_spesa"
             android:textColor="#E80000"
             app:iconTint="@color/cookery_blue" />
+
+            <TextView
+                android:id="@+id/voidStep"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="@string/noStepFoundString"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:visibility="gone"
+                />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_steps"
