--- a/app/src/main/res/drawable/rounded_shape.xml
+++ b/app/src/main/res/drawable/rounded_shape.xml
@@ -10,4 +10,6 @@
         android:bottom="0dp"
         android:right="0dp"
         android:top="0dp"/>
+
+    <solid android:color="#FFFFFF" />
 </shape>
