--- a/app/src/main/res/layout/layout_ingredient_pantry_dialog.xml
+++ b/app/src/main/res/layout/layout_ingredient_pantry_dialog.xml
@@ -5,19 +5,20 @@
     android:id="@+id/layout_ingredient_dialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/border_radius_style_btn">
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/dialogIngredientCard"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:background="@drawable/border_radius_style_btn">
+        android:layout_height="210dp"
 
-        <LinearLayout
+        >
+
+        <RelativeLayout
             android:id="@+id/layoutIngredientAddIngredient"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/border_radius_style_btn"
+            android:background="@color/cookery_blue"
             android:orientation="vertical"
             android:padding="6dp">
 
@@ -35,55 +36,50 @@
                 android:id="@+id/tipe_pantry_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginTop="20dp"
                 tools:ignore="SpeakableTextPresentCheck" />
 
 
             <EditText
                 android:id="@+id/IngredientEditText"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="48dp"
-                android:layout_above="@+id/deleteIngredientButton"
-                android:layout_below="@id/IngredientName"
-                android:layout_marginVertical="15dp"
-                android:layout_marginTop="32dp"
+                android:layout_below="@id/tipe_pantry_spinner"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/rounded_shape"
                 android:hint="@string/ingredient_hint_string"
                 android:inputType="number"
                 android:minHeight="48dp"
-                android:padding="6dp"
-                app:layout_constraintTop_toBottomOf="@+id/tipe_pantry_spinner" />
+                android:padding="6dp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/deleteIngredientButton"
-                    android:layout_width="100dp"
-                    android:layout_height="48dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_toLeftOf="@id/addIngredientButton"
-                    android:text="@string/delete_button"
-                    app:layout_constraintBottom_toBottomOf="@+id/addIngredientButton"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/addIngredientButton" />
-
-                <Button
-                    android:id="@+id/addIngredientButton"
-                    android:layout_width="100dp"
-                    android:layout_height="48dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginStart="15dp"
-                    android:text="@string/add_button"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/deleteIngredientButton"
-                    app:layout_constraintTop_toBottomOf="@+id/IngredientEditText" />
-            </LinearLayout>
+            <Spinner
+                android:id="@+id/measureUnitSpinner"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_below="@id/tipe_pantry_spinner"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_toRightOf="@id/IngredientEditText" />
 
 
-        </LinearLayout>
+            <Button
+                android:id="@+id/deleteIngredientButton"
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                android:layout_alignParentBottom="true"
+                android:text="@string/delete_button" />
+
+            <Button
+                android:id="@+id/addIngredientButton"
+                android:layout_width="100dp"
+                android:layout_height="48dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="20dp"
+                android:layout_toRightOf="@id/deleteIngredientButton"
+                android:text="@string/add_button" />
+
+
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
 
