--- a/app/src/main/res/values/resource.xml
+++ b/app/src/main/res/values/resource.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string-array name="planets_array">
+<string-array name="pantry_array">
     <item>Pantry</item>
     <item>Fridge</item>
     <item>Freezer</item>
