--- a/app/src/main/res/layout/login_register_activity.xml
+++ b/app/src/main/res/layout/login_register_activity.xml
@@ -39,6 +39,7 @@
     </ImageView>
 
     <ProgressBar
+        android:id="@+id/login_progress"
         android:layout_width="87dp"
         android:layout_height="81dp"
         android:visibility="gone"
@@ -50,6 +51,7 @@
     </ProgressBar>
 
     <EditText
+        android:id="@+id/login_mail"
         android:layout_width="350dp"
         android:layout_height="62dp"
         android:layout_marginBottom="4dp"
@@ -58,7 +60,7 @@
         android:inputType="textEmailAddress"
         android:textAlignment="center"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/login_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent">
@@ -74,12 +76,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.649"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintStart_toStartOf="@+id/login_button"
+        app:layout_constraintTop_toBottomOf="@+id/login_button"
         app:layout_constraintVertical_bias="0.145" />
 
     <EditText
-        android:id="@+id/textView"
+        android:id="@+id/login_password"
         android:layout_width="350dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -88,7 +90,7 @@
         android:inputType="textPassword"
         android:textAlignment="center"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/login_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent">
@@ -102,14 +104,14 @@
         android:fontFamily="@font/poppins_regular"
         android:text="Forgot password?"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="@+id/login_button"
         app:layout_constraintHorizontal_bias="0.453"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/login_button"
         app:layout_constraintVertical_bias="0.145" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/login_button"
         android:layout_width="250dp"
         android:layout_height="0dp"
         android:layout_marginBottom="120dp"
