--- a/app/src/main/res/menu/drawer_nav_menu.xml
+++ b/app/src/main/res/menu/drawer_nav_menu.xml
@@ -3,17 +3,17 @@
     <group android:checkableBehavior="single">
 
         <item
-            android:id="@+id/myProfile"
+            android:id="@+id/my_profile"
             android:title="My Profile"
             android:icon="@drawable/ic_baseline_account_circle_24"/>
 
         <item
-            android:id="@+id/foodPreferences"
+            android:id="@+id/food_preferences"
             android:title="Preferences"
             android:icon="@drawable/ic_preferences_v2"/>
 
         <item
-            android:id="@+id/Logout"
+            android:id="@+id/logout_drawer"
             android:title="Logout"
             android:icon="@drawable/ic_logout"/>
 
