--- a/app/src/main/res/layout/alimentar_preference_activity.xml
+++ b/app/src/main/res/layout/alimentar_preference_activity.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.AlimentarPreferenceActivity">
+
+
+<RelativeLayout
     android:id="@+id/alimentarPreferences"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -247,3 +256,16 @@
     </ScrollView>
 
 </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/drawer_menu_header"
+        app:menu="@menu/drawer_nav_menu" >
+
+    </com.google.android.material.navigation.NavigationView>
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
