--- a/app/src/main/res/layout/activity_make_recipe.xml
+++ b/app/src/main/res/layout/activity_make_recipe.xml
@@ -58,6 +58,7 @@
             </androidx.recyclerview.widget.RecyclerView>
 
             <Button
+                android:id="@+id/add_step_button"
                 android:layout_marginTop="25dp"
                 android:layout_width="170dp"
                 android:layout_height="40dp"
@@ -65,6 +66,19 @@
                 android:fontFamily="@font/poppins_semi_bold"
                 android:text="Add steps"
                 android:textAllCaps="false" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select number of steps:"
+                android:fontFamily="@font/poppins_semi_bold"
+                android:layout_marginTop="10dp"/>
+
+            <Spinner
+                android:id="@+id/stepSpinner"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/step_list"
