--- a/app/src/main/res/layout/add_step_dialog.xml
+++ b/app/src/main/res/layout/add_step_dialog.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/step_dialog"
+    android:id="@+id/add_step_dialog"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,10 +15,7 @@
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
-        android:lines="10"
-        android:minLines="6"
-        android:maxLines="15"/>
+        android:layout_marginBottom="15dp" />
 
     <Button
         android:id="@+id/ingredient_dialog_btn"
