--- a/app/src/main/res/layout/home_subcard.xml
+++ b/app/src/main/res/layout/home_subcard.xml
@@ -9,7 +9,9 @@
     android:layout_marginTop="0dp"
     android:theme="@style/Theme.MaterialComponents.Light"
     app:cardCornerRadius="8dp"
-    app:cardElevation="8dp">
+    app:cardElevation="8dp"
+    app:strokeWidth="2dp"
+    app:strokeColor="@color/cookery_blue">
 
     <ImageView
         android:id="@+id/imageViewTestS"
