--- a/app/src/main/res/layout/home_subcard.xml
+++ b/app/src/main/res/layout/home_subcard.xml
@@ -22,12 +22,16 @@
 
     <TextView
         android:id="@+id/textViewTestS"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
+        android:paddingTop="0dp"
+        android:paddingLeft="11dp"
+        android:paddingRight="11dp"
+        android:textColor="@color/white"
         android:layout_marginTop="90dp"
         android:fontFamily="@font/poppins_regular"
         android:textAlignment="viewStart"
+        android:background="@color/tranparent_black"
         android:textSize="14sp" />
 
 </com.google.android.material.card.MaterialCardView>
