fix grafico chips

--- a/app/src/main/res/layout/item_chip_ingredient_search.xml
+++ b/app/src/main/res/layout/item_chip_ingredient_search.xml
@@ -4,8 +4,8 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/cookery_blue"
-    card_view:cardBackgroundColor="@color/cookery_blue"
+    android:background="@android:color/transparent"
+    card_view:cardBackgroundColor="@android:color/transparent"
     card_view:cardElevation="0dp">
 
     <com.google.android.material.chip.Chip
