--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,39 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_item"
-    android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:layout_gravity="center"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="5dp">
+    android:id="@+id/cardView"
+    android:layout_width="180dp"
+    android:layout_height="159dp"
+    android:layout_marginStart="15dp"
+    android:layout_marginTop="2dp"
+    android:theme="@style/Theme.MaterialComponents.Light"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="8dp"
+    app:strokeWidth="2dp"
+    app:strokeColor="@color/cookery_blue">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?android:selectableItemBackground"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/TextViewCardRicetta"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textAlignment="center" />
+    
 
 
         <ImageView
-            android:id="@+id/ImageViewCardRicetta"
+            android:id="@+id/imageViewRicetta"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
+            android:src="@drawable/lasagne"
              />
 
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/textViewRicetta"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginTop="130dp"
+            android:background="@color/tranparent_black"
+            android:fontFamily="@font/poppins_regular"
+            android:paddingLeft="11dp"
+            android:paddingRight="11dp"
+            android:paddingTop="3dp"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
 
-</androidx.cardview.widget.CardView>
+
+
+
+</com.google.android.material.card.MaterialCardView>
