--- a/app/src/main/res/layout/login_register_activity.xml
+++ b/app/src/main/res/layout/login_register_activity.xml
@@ -20,7 +20,8 @@
             android:layout_width="30dp"
             android:layout_height="match_parent"
             android:layout_marginStart="15dp"
-            app:srcCompat="@drawable/ic_back_button" />
+            app:srcCompat="@drawable/ic_back_button"
+            android:foreground="?android:attr/selectableItemBackground"/>
 
     </LinearLayout>
 
