--- a/app/src/main/res/layout/add_ingredient_dialog.xml
+++ b/app/src/main/res/layout/add_ingredient_dialog.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:id="@+id/add_ingredient_dialog"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,8 +12,8 @@
     <SearchView
         android:id="@+id/ingredient_dialog_sv"
         android:iconifiedByDefault="false"
-        android:layout_gravity="center"
-        android:layout_width="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="250dp"
         android:layout_height="30dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
@@ -28,7 +28,8 @@
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ingredient_dialog_sv"/>
 
     <Button
         android:id="@+id/ingredient_dialog_btn"
@@ -36,8 +37,20 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="240dp"
         android:textAllCaps="false"
+        android:layout_below="@id/ingredient_dialog_rv"
         android:text="Save"
         android:backgroundTint="@color/cookery_blue"
         android:layout_marginBottom="15dp"/>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/ingredient_dialog_btn_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ingredient_dialog_rv"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="15dp"
+        android:backgroundTint="@color/cookery_blue"
+        android:text="@string/delete_button"
+        android:textAllCaps="false" />
+
+</RelativeLayout>
