--- a/app/src/main/res/layout/layout_ingredient_make_recipe_dialog.xml
+++ b/app/src/main/res/layout/layout_ingredient_make_recipe_dialog.xml
@@ -4,24 +4,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_ingredient_dialogV2"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="150dp"
     android:background="@drawable/rounded_shape_v3"
     >
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/dialogIngredientCardV2"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
 
-        >
 
         <RelativeLayout
             android:id="@+id/layoutIngredientAddIngredientV2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:background="@color/cookery_blue"
+
             android:gravity="center"
             android:orientation="vertical"
             android:padding="6dp">
@@ -40,7 +35,7 @@
 
             <EditText
                 android:id="@+id/IngredientEditTextV2"
-                android:layout_width="200dp"
+                android:layout_width="160dp"
                 android:layout_height="48dp"
                 android:background="@drawable/rounded_shape"
                 android:gravity="center"
@@ -64,8 +59,10 @@
                 android:id="@+id/deleteIngredientButtonV2"
                 android:layout_width="100dp"
                 android:layout_height="48dp"
+                android:backgroundTint="@color/cookery_blue"
                 android:layout_below="@+id/IngredientEditTextV2"
                 android:layout_marginTop="28dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/delete_button" />
 
             <Button
@@ -73,7 +70,8 @@
                 android:layout_width="100dp"
                 android:layout_height="48dp"
                 android:layout_below="@+id/IngredientEditTextV2"
-                android:layout_marginLeft="13dp"
+                android:layout_marginLeft="110dp"
+                android:backgroundTint="@color/cookery_blue"
                 android:layout_marginTop="28dp"
                 android:layout_toRightOf="@id/deleteIngredientButtonV2"
                 android:text="@string/add_button" />
@@ -81,6 +79,6 @@
 
         </RelativeLayout>
 
-    </androidx.cardview.widget.CardView>
+
 
 </RelativeLayout>
