--- a/app/src/main/res/layout/layout_ingredient_pantry_dialog.xml
+++ b/app/src/main/res/layout/layout_ingredient_pantry_dialog.xml
@@ -3,24 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_ingredient_dialog"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="225dp"
+    android:background="@android:color/transparent"
+
     >
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/dialogIngredientCard"
-        android:layout_width="match_parent"
-        android:layout_height="210dp"
-
-        >
 
         <RelativeLayout
             android:id="@+id/layoutIngredientAddIngredient"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/cookery_blue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="6dp">
+            android:padding="6dp"
+            android:background="@drawable/rounded_shape_v3">
 
 
             <TextView
@@ -29,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
                 android:textAlignment="center"
-                android:textSize="18sp" />
+                android:textSize="22sp" />
 
 
             <Spinner
@@ -37,12 +33,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
-                tools:ignore="SpeakableTextPresentCheck" />
+                tools:ignore="SpeakableTextPresentCheck"
+                />
 
 
             <EditText
                 android:id="@+id/IngredientEditText"
-                android:layout_width="200dp"
+                android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:layout_below="@id/tipe_pantry_spinner"
                 android:layout_marginTop="20dp"
@@ -50,7 +47,8 @@
                 android:hint="@string/ingredient_hint_string"
                 android:inputType="number"
                 android:minHeight="48dp"
-                android:padding="6dp" />
+                android:padding="6dp"
+                android:layout_marginLeft="10dp"/>
 
             <Spinner
                 android:id="@+id/measureUnitSpinner"
@@ -68,6 +66,8 @@
                 android:layout_width="100dp"
                 android:layout_height="48dp"
                 android:layout_alignParentBottom="true"
+                android:backgroundTint="@color/cookery_blue"
+                android:layout_marginLeft="15dp"
                 android:text="@string/delete_button" />
 
             <Button
@@ -75,13 +75,16 @@
                 android:layout_width="100dp"
                 android:layout_height="48dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginLeft="20dp"
+                android:backgroundTint="@color/cookery_blue"
+                android:layout_marginLeft="135dp"
                 android:layout_toRightOf="@id/deleteIngredientButton"
-                android:text="@string/add_button" />
+                android:text="@string/add_button"
+                android:layout_marginRight="10dp"/>
 
 
         </RelativeLayout>
 
-    </androidx.cardview.widget.CardView>
+
 
 </RelativeLayout>
+
