--- a/app/src/main/res/layout/layout_ingredient_quantity_dialog.xml
+++ b/app/src/main/res/layout/layout_ingredient_quantity_dialog.xml
@@ -4,20 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_ingredient_dialog"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/border_radius_style_btn">
+    android:layout_height="210dp"
+    >
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/dialogIngredientCard"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:background="@drawable/border_radius_style_btn">
+
 
         <LinearLayout
             android:id="@+id/layoutIngredientAddIngredient"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/border_radius_style_btn"
+            android:background="@drawable/rounded_shape_v3"
             android:orientation="vertical"
             android:padding="6dp">
 
@@ -28,19 +24,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
                 android:textAlignment="center"
-                android:textSize="18sp" />
+                android:layout_marginTop="5dp"
+                android:textSize="22sp" />
 
 
             <EditText
                 android:id="@+id/IngredientEditText"
-                android:layout_width="match_parent"
+                android:layout_width="175dp"
                 android:layout_height="48dp"
                 android:layout_above="@+id/deleteIngredientButton"
                 android:layout_below="@id/IngredientName"
                 android:layout_marginVertical="15dp"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="15dp"
                 android:background="@drawable/rounded_shape"
                 android:hint="@string/ingredient_hint_string"
+                android:layout_marginLeft="15dp"
                 android:inputType="number"
                 android:minHeight="48dp"
                 android:padding="6dp"
@@ -57,7 +55,9 @@
                     android:layout_height="48dp"
                     android:layout_alignParentBottom="true"
                     android:layout_toLeftOf="@id/addIngredientButton"
+                    android:layout_marginLeft="15dp"
                     android:text="@string/delete_button"
+                    android:backgroundTint="@color/cookery_blue"
                     app:layout_constraintBottom_toBottomOf="@+id/addIngredientButton"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/addIngredientButton" />
@@ -68,7 +68,8 @@
                     android:layout_height="48dp"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginStart="15dp"
+                    android:layout_marginStart="80dp"
+                    android:backgroundTint="@color/cookery_blue"
                     android:text="@string/add_button"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/deleteIngredientButton"
@@ -78,6 +79,6 @@
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+
 
 </RelativeLayout>
