--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -27,8 +27,8 @@
             android:layout_marginEnd="5dp"
             android:background="@drawable/rounded_shape"
             android:iconifiedByDefault="false"
-            android:queryHint="Add ingredient"
-            app:defaultQueryHint="Add ingredient"
+            android:queryHint="@string/search_an_ingredient"
+            app:defaultQueryHint="@string/search_an_ingredient"
             app:iconifiedByDefault="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
