--- a/app/src/main/res/layout/fragment_pantry.xml
+++ b/app/src/main/res/layout/fragment_pantry.xml
@@ -26,7 +26,7 @@
                 android:paddingLeft="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Pantry"
+                android:text="@string/pantry"
                 android:textSize="25dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_semi_bold"/>
@@ -44,7 +44,7 @@
                 android:layout_marginTop="25dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Fridge"
+                android:text="@string/fridge"
                 android:textColor="@color/black"
                 android:paddingLeft="15dp"
                 android:textSize="25dp"
@@ -63,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
-                android:text="Freezer"
+                android:text="@string/freezer"
                 android:paddingLeft="15dp"
                 android:textColor="@color/black"
                  android:textSize="25dp"
