--- a/app/src/main/res/layout/login_register_activity.xml
+++ b/app/src/main/res/layout/login_register_activity.xml
@@ -57,7 +57,7 @@
         android:layout_height="62dp"
         android:layout_marginBottom="4dp"
         android:fontFamily="@font/poppins_regular"
-        android:hint="email address"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:textAlignment="center"
         android:textSize="20sp"
@@ -73,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_regular"
-        android:text="Register"
+        android:text="@string/register_lowercase"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.649"
@@ -87,7 +87,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/poppins_regular"
-        android:hint="password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:textAlignment="center"
         android:textSize="20sp"
@@ -103,7 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_regular"
-        android:text="Forgot password?"
+        android:text="@string/forgot_password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/login_button"
         app:layout_constraintHorizontal_bias="0.453"
@@ -119,7 +119,7 @@
         android:backgroundTint="@color/cookery_blue"
         android:elevation="8dp"
         android:fontFamily="@font/poppins_bold"
-        android:text="LOGIN"
+        android:text="@string/login"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
