--- a/app/src/main/res/layout/activity_single_recipe.xml
+++ b/app/src/main/res/layout/activity_single_recipe.xml
@@ -32,7 +32,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/lasagne"
                     android:scaleType="centerCrop"
                     android:adjustViewBounds="true"/>
 
@@ -124,7 +123,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_regular"
                     android:paddingLeft="15dp"
-                    android:text="Ingredients:"
+                    android:text="@string/ingredients_double_dot"
                     android:textSize="20sp" />
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -160,7 +159,6 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="15dp"
-                    android:text="2 Persone"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
