--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:text="COOKERY"
+        android:text="@string/app_name_uppercase"
         android:textSize="34sp"
         android:layout_marginLeft="65dp"
         android:fontFamily="@font/poppins_semi_bold"
